@@ -13,6 +13,11 @@
                title="Add FacultyStaffDirectory types to Kupu's resource libraries">
   </import-step>
 
+  <import-step id="setVersionedTypes"
+               version="20110223-01"
+               handler="Products.FacultyStaffDirectory.setuphandlers.setVersionedTypes"
+               title="Set up versioning for FacultyStaffDirectory types">
+  </import-step>
 
 </import-steps>
 
